Add background repeating

--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,4 @@
-.test {
-  color: #fff;
-  font-size: 50px;
-}
-
 body {
-  background-color: blue;
-  background-image: url('../img/sky.jpg')
-}
-
-#bg {
-  background-image: url('../img/sky.jpg');
-  height: 500px;
-  border: 1px solid seashell;
+  background-image: url('../img/repeat-bg.jpg');
+  background-repeat: repeat-x;
 }
