--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
 body {
-  background-image: url('../img/repeat-bg.jpg');
-  background-repeat: repeat-x;
+  padding: 0;
+  margin: 0;
+  background-color: skyblue;
+}
+
+nav {
+  padding: 10px;
+  background-color: #fff;
+  color: cornflowerblue;
+  border-top: 3px solid red;
+  border-bottom: 3px solid blue;
 }
