--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,9 @@
 body {
   padding: 0;
   margin: 0;
-  background-color: skyblue;
 }
 
-nav {
-  padding: 10px;
-  background-color: #fff;
-  color: cornflowerblue;
-  border-top: 3px solid red;
-  border-bottom: 3px solid blue;
+#padding-test {
+  padding: 40px 20px;
+  border: 2px solid #000;
 }
