--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,83 @@
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   padding: 0;
   margin: 0;
 }
 
-.center {
-  border: 2px solid black;
-  width: 300px;
-  height: 100px;
-  margin: auto;
+* { padding: 0; margin: 0; border: 0; }
+
+.form {
+  margin: 0 auto;
+  max-width: 480px;
+  padding: 20px 2% 0;
+  margin-bottom: 15px;
+}
+fieldset {
+  border: none;
+  margin: 0;
+}
+
+legend {
+  font-size: 25px;
+  font-weight: bold;
+  font-family: 'Open Sans', sans-serif;
+  padding-inline-start: 0px;
+  line-height: 1.14286;
+  margin-bottom: 20px;
+}
+
+legend span {
+  display: block;
+  font-size: 12px;
+  font-weight: normal;
+  line-height: 2.28571;
+}
+
+.form__link {
+  color: #0061ff;
+  text-decoration: none;
+}
+
+.form__input {
+  display: block;
+  padding: 20px 10px;
+  margin-bottom: 15px;
+  width: 100%;
+  height: 20px;
+  border: 1px solid lightgray;
+}
+
+.form__description {
+  margin-bottom: 15px;
+  font-size: 12px;
+  font-weight: 200;
+  line-height: 150%;
+  color: #637282;
+  text-align: left;
+}
+
+.form__checkbox-input {
+  margin-right: 10px;
+}
+
+.form__checkbox, .form__checkbox-input {
+  display: inline-block;
+  vertical-align: -1.5px;
+  margin-bottom: 10px;
+}
+
+.form__enter {
+  display: block;
+  width: 100%;
+  margin-bottom: 15px;
+  color: #fff;
+  background-color: #0061ff;
+  height: 40px;
 }
